[project]
name = "odoo-addons-oca-storage"
version = "18.0.20241110.1"
dependencies = [
    "odoo-addon-fs_attachment==18.0.*",
    "odoo-addon-fs_storage==18.0.*",
    "odoo-addon-storage_backend==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
